# ankigen

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-13-ankigen-implementation.md
docs/superpowers/specs/: 2026-04-13-ankigen-design.md
scripts/: download_data.py
src/ankigen/: cli.py  pipeline.py
src/ankigen/exporters/: __init__.py  apkg.py  tsv.py
src/ankigen/languages/: __init__.py  base.py
src/ankigen/languages/mandarin/: dictionary.py  pinyin.py  proficiency.py  tokenizer.py
src/ankigen/languages/mandarin/data/: hsk.json
src/ankigen/parsers/: __init__.py  base.py  epub.py  pdf.py  txt.py
tests/: conftest.py  test_apkg_exporter.py  test_base.py  test_cli.py  test_dictionary.py  test_exporter.py  test_extract_vocabulary.py  test_integration.py  test_parsers.py  test_pinyin.py  test_pipeline.py  test_proficiency.py  test_registry.py  test_tokenizer.py
tests/fixtures/: cedict_sample.u8  hsk_sample.json
