[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ankigen"
version = "0.1.0"
description = "Extract vocabulary from foreign-language texts and generate Anki flashcard decks"
requires-python = ">=3.11"
dependencies = [
    "jieba>=0.42",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.10",
    "lxml>=5.0",
    "genanki>=0.13",
]

[project.scripts]
ankigen = "ankigen.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "fpdf2>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ankigen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
